# SolarChain-Eval

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifact_pipeline/: 04_write_results_manifest.sh  README.md
paper_pipeline/: 00_setup_linux.sh  01_smoke_check.sh  02_run_paper_experiments.sh  03_make_figures_for_run.sh  04_write_results_manifest.sh  IMPLEMENTATION_PLAN.md  README.md  RESUME_AFTER_STEP3_INTERRUPTION.md  WINDOWS_SMOKE_GUIDE.md
scripts/: evaluate.py  run_all_baselines.py  train.py
src/solarchain_eval/: evaluate.py  run_metadata.py
src/solarchain_eval/agent/: __init__.py  auditor.py  context.py  llm_client.py  planner.py  prompts.py  schemas.py  wrappers.py
tests/: test_agentic_llm.py
